--- a/src/memoire/Exam.form
+++ b/src/memoire/Exam.form
@@ -180,11 +180,10 @@
         <Component class="javax.swing.JComboBox" name="nbrPar">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="1"/>
-                <StringItem index="1" value="2"/>
-                <StringItem index="2" value="3"/>
-                <StringItem index="3" value="4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="2"/>
+                <StringItem index="1" value="3"/>
+                <StringItem index="2" value="4"/>
               </StringArray>
             </Property>
           </Properties>
@@ -199,11 +198,10 @@
         <Component class="javax.swing.JComboBox" name="NbrDeg">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="1"/>
-                <StringItem index="1" value="2"/>
-                <StringItem index="2" value="3"/>
-                <StringItem index="3" value="4"/>
+              <StringArray count="3">
+                <StringItem index="0" value="2"/>
+                <StringItem index="1" value="3"/>
+                <StringItem index="2" value="4"/>
               </StringArray>
             </Property>
           </Properties>
@@ -246,9 +244,9 @@
               <Font name="Tahoma" size="14" style="1"/>
             </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/memoire/1494986489_home-05.png"/>
+              <Image iconType="3" name="/memoire/1495511725_accessories-text-editor.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Home Page  "/>
+            <Property name="text" type="java.lang.String" value="Editor Page  "/>
             <Property name="horizontalTextPosition" type="int" value="2"/>
           </Properties>
           <Events>
