--- a/src/memoire/Exe.form
+++ b/src/memoire/Exe.form
@@ -155,6 +155,15 @@
         <Property name="label" type="java.lang.String" value="popupMenu2"/>
       </Properties>
     </Menu>
+    <Container class="javax.swing.JMenu" name="jMenu7">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jMenu7"/>
+      </Properties>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout">
+        <Property name="useNullLayout" type="boolean" value="true"/>
+      </Layout>
+    </Container>
     <Menu class="javax.swing.JMenuBar" name="menubar">
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="jMenu1">
